manifests/overlays/dev/deployment.yaml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: 82241017 
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: 82241017
          command: ["java","-jar","/app.jar"]
          args: ["--spring.config.location=file:/config/application.yml"]
          volumeMounts:
          - mountPath: /mnt/82241017
            name: 82241017-volume
            readOnly: false
            subPath: "82241017"
          - mountPath: /config
            name: application-properties
            readOnly: true
      volumes:
      - name: 82241017-volume
        persistentVolumeClaim:
          claimName: cepg-aa-std-pvc
      - name: application-properties
        configMap:
          name: 82241017-configmap
          items:
            - key: application.yml
              path: application.yml
          defaultMode: 420
