manifests/overlays/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: 82241017-ingress
spec:
  ingressClassName: ingress-internal
  rules:
  - host: 82241017.ce-aa.kubepia.net
    http:
      paths:
      - path: /
        backend:
          service:
            name: 82241017
            port:
              number: 8080
        pathType: Prefix
